--- a/src/Components/Reply.scss
+++ b/src/Components/Reply.scss
@@ -2,6 +2,7 @@
 
 .add-reply-container {
     background-color: $White;
+    position: relative;
     display: flex;
     flex-direction: row;
     width: 100%;
