Made style adjustments

--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -66,6 +66,12 @@
     } 
     .comment-right-section {
         width: 90%;
+        .user-info {
+            display: flex;
+            justify-content: flex-start;
+            gap: 1rem;
+            margin-left: 1%;
+        }
     }
 }
 
