--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -104,6 +104,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: relative;
     width: 100%;
     .user-info {
         @extend .comment-user-container;
@@ -130,6 +131,12 @@
         width: 2rem;
         font-weight: 600;
         text-align: center;
+    }
+    #dots-icon {
+        color: $GrayishBlue;
+        cursor: pointer;
+        font-size: 1.15rem;
+        padding-left: 1rem;
     }
 }
 
