Implemented axios edit comments request

--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -141,6 +141,28 @@
 }
 
 .comment-feedback-container {
+    span {
+        color: $ModerateBlue;
+    }
+    #edit-reply {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 0.5rem;
+    }
+    input {
+        width: 100%;
+        border: 0;
+        padding: 1rem;
+        border: 1px solid rgb(221, 221, 221);;
+    }
+    #send-edited-reply {
+        padding-left: 0.75rem;
+        &:hover {
+            cursor: pointer;
+            color: $LightGrayishBlue;
+        }
+    }
     display: flex;
     flex-direction: row;
     width: 95%;
