--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -72,6 +72,14 @@
             gap: 1rem;
             margin-left: 1%;
         }
+        #modified {
+            background-color: $LightGray;
+            color: $ModerateBlue;
+            border-radius: 1rem;
+            padding: 0.5rem;
+            font-size: 0.75rem;
+            font-weight: 700;
+        }
     }
 }
 
