--- a/src/Components/Notifications.scss
+++ b/src/Components/Notifications.scss
@@ -8,6 +8,11 @@
     width: 17.5%;
     height: 100%;
     transition: transform 0.3s ease-in-out;
+    #notifications-message {
+        font-weight: 600;
+        margin-top: 50%;
+        text-align: center;
+    }
   }
   
   .notifications-container.active {
