Implemented MUI speedial

--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -70,6 +70,7 @@
     } 
     .comment-right-section {
         width: 90%;
+        position: relative;
         .user-info {
             display: flex;
             justify-content: flex-start;
