--- a/src/Pages/Profile.scss
+++ b/src/Pages/Profile.scss
@@ -3,3 +3,21 @@
     width: 50%;
     margin-top: 2rem;
 }
+
+.user-name-container {
+    display: flex;
+    align-items: center;
+    gap: 0.65rem;
+    h3 {
+        padding: 0.35rem;
+        width: 1.65rem;
+        display: flex;
+        justify-content: center;
+        font-size: 1.35rem;
+        font-weight: 500;
+        color: white;
+        border-radius: 50%;
+        margin-top: 1rem;
+        text-transform: uppercase;
+    }
+}
